# video-labelling-tool

./: .env.example  .gitignore  README.md  debug.sh  docker-compose.cpu.yml  docker-compose.linux.yml  docker-compose.prod.yml  docker-compose.yml  requirements.txt  start.sh
annotation/: frame_208208.txt
backend/: server.py
backend/core/: sam_model.py  video_processor.py
docs/: OPTIMIZATION_SUMMARY.md  PYTORCH_SAM2_OPTIMIZATIONS.md  QUICK_START.md  RESOURCE_MANAGEMENT.md  SAM2_IMPLEMENTATION_TODO.md  SAM2_PROPAGATION_PERFORMANCE.md  VIDEO_ANNOTATION_ANALYSIS.md
frontend/: app.py
frontend/components/: canvas.py  export.py  polygon_editor.py  timeline.py  tools.py  video_player.py
input/: temp_vid_image0.txt  temp_vid_image295.txt
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.js  ContourEdit.js
react_frontend/src/components/: PhotoPicker.css  PhotoPicker.js
sam-service/: .env.development  .env.example  Dockerfile.dev  main.py  pyproject.toml  requirements-cpu.txt  requirements.txt  schemas.py  test_sam2_local.py
sam-service/core/: __init__.py  job_manager.py  sam2_video_predictor.py  sam_predictor.py
system_architecture/: NOTES.md  architecture.mermaid
system_architecture/medical_taxonomy/: MEDICAL_TAXONOMY_IMPLEMENTATION.md  MEDICAL_TAXONOMY_PROPOSAL.md  TAXONOMY_CONFIGURATION_SYSTEM.md
system_architecture/temporal_tracking/: TEMPORAL_STORAGE_ARCHITECTURE.md  TEMPORAL_TRACKING_DESIGN.md  TEMPORAL_TRAINING_BENEFITS.md
web-backend/: Dockerfile.dev  pyproject.toml  requirements-cpu.txt  requirements.txt
web-backend/app/: main.py
web-backend/app/api/: deps.py
web-backend/app/api/v1/: api.py
web-backend/app/api/v1/endpoints/: annotations.py  auth.py  masks.py  projects.py  sam.py  templates.py  videos.py
web-backend/app/core/: config.py  sam_model.py  security.py
web-backend/app/crud/: __init__.py  base.py  crud_annotation.py  crud_project.py  crud_user.py  crud_video.py
web-backend/app/models/: models.py
web-backend/app/routers/: export.py
web-backend/app/schemas/: schemas.py
web-backend/app/services/: annotation_formats.py  export_service.py  storage_service.py
web-backend/migrations/: 001_object_storage_migration.sql  002_annotation_format_migration.sql  003_add_display_name_to_projects.sql
web-frontend/: Dockerfile.dev  index.html  package-lock.json  package.json  vite.config.ts
web-frontend/src/: App.tsx  main.tsx
web-frontend/src/components/annotation/: AnnotationCanvas.tsx  MaskAdjustmentTools.tsx  PolygonEditor.tsx  SAM2Controls.tsx  VideoPlayer.tsx
web-frontend/src/components/export/: ExportDialog.tsx
web-frontend/src/components/settings/: CategoryManager.tsx  TemplateManager.tsx
web-frontend/src/components/ui/: AuthGuard.tsx  ErrorBoundary.tsx  Navbar.tsx
web-frontend/src/pages/: AnnotationPage.tsx  DashboardPage.tsx  LoginPage.tsx  ProjectPage.tsx
web-frontend/src/store/: store.ts
web-frontend/src/store/slices/: annotationSlice.ts  authSlice.ts  projectSlice.ts  sam2Slice.ts  videoSlice.ts
web-frontend/src/types/: index.ts
web-frontend/src/utils/: api.ts  theme.ts
