[project]
name = "sam-service"
version = "0.1.0"
description = "SAM service for video labelling tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "ultralytics>=8.2.0,<9.0",
    "opencv-python>=4.8.1,<5.0",
    "numpy>=1.24.3,<2.0",
    "pillow>=10.1.0,<11.0",
    "redis>=5.0.1,<6.0",
    "python-multipart>=0.0.6,<1.0",
    "pydantic>=2.5.0,<3.0",
    "torch>=2.1.1,<3.0",
    "torchvision>=0.16.1,<1.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.1.1,<3.0",
    "torchvision>=0.16.1,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "extra == 'cpu'" }
torchvision = { index = "pytorch-cpu", marker = "extra == 'cpu'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"