[project]
name = "web-backend"
version = "0.1.0"
description = "FastAPI backend for video labelling tool"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.1,<1.0",
    "uvicorn[standard]>=0.24.0,<1.0",
    "sqlalchemy>=2.0.23,<3.0",
    "alembic>=1.12.1,<2.0",
    "psycopg2-binary>=2.9.9,<3.0",
    "redis>=5.0.1,<6.0",
    "python-multipart>=0.0.6,<1.0",
    "python-jose[cryptography]>=3.3.0,<4.0",
    "passlib[bcrypt]>=1.7.4,<2.0",
    "python-decouple>=3.8,<4.0",
    "pydantic>=2.5.0,<3.0",
    "pydantic-settings>=2.1.0,<3.0",
    "opencv-python>=4.8.1,<5.0",
    "numpy>=1.24.3,<2.0",
    "pillow>=10.1.0,<11.0",
    "aiofiles>=23.2.1,<24.0",
    "httpx>=0.25.2,<1.0",
    "ultralytics>=8.0.196,<9.0",
    "torch>=2.1.0,<3.0",
    "torchvision>=0.16.0,<1.0",
    "minio>=7.2.0,<8.0",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.1.0,<3.0",
    "torchvision>=0.16.0,<1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = { index = "pytorch-cpu", marker = "extra == 'cpu'" }
torchvision = { index = "pytorch-cpu", marker = "extra == 'cpu'" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"